refactor: 메뉴에 아이콘 추가 & 코드 분리 & 디테일 수정

--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
 		/>
-		<link rel="stylesheet" href="/stylesheet.css" />
+		<link rel="stylesheet" href="/stylesheets/stylesheet.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<nav>
-			<a href="/index.html" id="logo">
+		<nav class="row-align-center">
+			<a href="/index.html" class="row-align-center">
 				<span class="material-symbols-outlined"> home </span>
 				IBK 기업은행
 			</a>
-			<ul class="menu-list">
+			<ul class="menu-list row-align-center">
 				<li>
-					<label for="introduce"><span>은행안내</span></label>
 					<input type="checkbox" id="introduce" class="menu" />
-
+					<label for="introduce" class="row-align-center">
+						<span>은행안내</span>
+						<span class="material-symbols-outlined"> arrow_drop_down </span>
+					</label>
 					<ul class="menu-dropdown">
 						<li class="truncate"><a href="#" title="은행장소개">은행장소개</a></li>
 						<li class="truncate"><a href="#" title="비전/경영방향">비전/경영방향</a></li>
@@ -29,8 +31,11 @@
 					</ul>
 				</li>
 				<li>
-					<label for="ethics"><span>윤리경영</span></label>
 					<input type="checkbox" id="ethics" class="menu" />
+					<label for="ethics" class="row-align-center">
+						<span>윤리경영</span>
+						<span class="material-symbols-outlined"> arrow_drop_down </span>
+					</label>
 					<ul class="menu-dropdown">
 						<li class="truncate"><a href="#" title="IBK윤리헌장">IBK윤리헌장</a></li>
 						<li class="truncate"><a href="#" title="IBK윤리경영">IBK윤리경영</a></li>
@@ -39,8 +44,11 @@
 					</ul>
 				</li>
 				<li>
-					<label for="esg"><span>ESG경영</span></label>
 					<input type="checkbox" id="esg" class="menu" />
+					<label for="esg" class="row-align-center">
+						<span>ESG경영</span>
+						<span class="material-symbols-outlined"> arrow_drop_down </span>
+					</label>
 					<ul class="menu-dropdown">
 						<li class="truncate"><a href="#" title="ESG전략">ESG전략</a></li>
 						<li class="truncate"><a href="#" title="환경경영">환경경영</a></li>
@@ -49,23 +57,26 @@
 					</ul>
 				</li>
 				<li>
-					<label for="info"><span>은행정보</span></label>
 					<input type="checkbox" id="info" class="menu" />
+					<label for="info" class="row-align-center">
+						<span>은행정보</span>
+						<span class="material-symbols-outlined"> arrow_drop_down </span>
+					</label>
 					<ul class="menu-dropdown">
 						<li class="truncate"><a href="#" title="경영지표">경영지표</a></li>
 						<li class="truncate"><a href="#" title="공공기관경영공시">공공기관경영공시</a></li>
 					</ul>
 				</li>
-				<li>
-					<label for="pr"><span>홍보센터</span></label>
-					<input type="checkbox" id="pr" class="menu" />
-					<ul class="menu-dropdown">
-						<li class="truncate"><a href="#" title="IBK소식">IBK소식</a></li>
-						<li class="truncate"><a href="#" title="IBK광고">IBK광고</a></li>
-						<li class="truncate"><a href="#" title="IBK사보">IBK사보</a></li>
-					</ul>
-				</li>
 			</ul>
+			<div class="row-align-center">
+				<p>Language</p>
+				<a href="#">
+					<img src="/imgs/kr-flag.svg" class="flag-img" />
+				</a>
+				<a href="#">
+					<img src="/imgs/us-flag.svg" class="flag-img" />
+				</a>
+			</div>
 		</nav>
 		<main>main입니다~</main>
 		<footer>footer입니다~</footer>
