feat: 스크롤함에 따라 사진이 움직이도록 구현

--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
 				<a href="#CS">CS</a>
 			</nav>
 		</header>
+
+		<section class="parallax">
+			<img src="/assets/christmas.png" id="christmas" width="100%" />
+			<img src="/assets/left.png" id="left" width="45%" />
+			<img src="/assets/santa.png" id="santa" width="50%" />
+			<h2 id="main-text">Merry Christmas</h2>
+		</section>
+
+		<script src="/javascript/script.js"></script>
 	</body>
 </html>
