chore: 대문자 시작에서 소문자로 변경

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<header>
 			<h2 class="logo"><a href="/">Logo</a></h2>
 			<nav>
-				<a href="#Business">Business</a>
-				<a href="#Project">Project</a>
-				<a href="#R&D">R&D</a>
-				<a href="#CS">CS</a>
+				<a href="#business">Business</a>
+				<a href="#project">Project</a>
+				<a href="#r&d">R&D</a>
+				<a href="#cs">CS</a>
 			</nav>
 		</header>
 
