--- a/index.html
+++ b/index.html
@@ -24,6 +24,57 @@
 			<h2 id="main-text">Merry Christmas</h2>
 		</section>
 
+		<section id="business">
+			<h2>Merry Christmas</h2>
+			<p>
+				Christmas is an annual festival commemorating the birth of Jesus Christ, observed primarily
+				on December 25[a] as a religious and cultural celebration among billions of people around
+				the world.[2][3][4] A feast central to the Christian liturgical year, it is preceded by the
+				season of Advent or the Nativity Fast and initiates the season of Christmastide, which
+				historically in the West lasts twelve days and culminates on Twelfth Night.[5] Christmas Day
+				is a public holiday in many countries,[6][7][8] is celebrated religiously by a majority of
+				Christians,[9] as well as culturally by many non-Christians,[1][10] and forms an integral
+				part of the holiday season organized around it.
+			</p>
+			<p>
+				The traditional Christmas narrative recounted in the New Testament, known as the Nativity of
+				Jesus, says that Jesus was born in Bethlehem, in accordance with messianic prophecies.[11]
+				When Joseph and Mary arrived in the city, the inn had no room and so they were offered a
+				stable where the Christ Child was soon born, with angels proclaiming this news to shepherds
+				who then spread the word.[12]
+			</p>
+			<p>
+				There are different hypotheses regarding the date of Jesus' birth and in the early fourth
+				century, the church fixed the date as December 25.[b][13][14][15] This corresponds to the
+				traditional date of the winter solstice on the Roman calendar.[16] It is exactly nine months
+				after Annunciation on March 25, also the date of the spring equinox.[17] Most Christians
+				celebrate on December 25 in the Gregorian calendar, which has been adopted almost
+				universally in the civil calendars used in countries throughout the world. However, part of
+				the Eastern Christian Churches celebrate Christmas on December 25 of the older Julian
+				calendar, which currently corresponds to January 7 in the Gregorian calendar. For
+				Christians, believing that God came into the world in the form of man to atone for the sins
+				of humanity, rather than knowing Jesus' exact birth date, is considered to be the primary
+				purpose in celebrating Christmas.[18][19][20]
+			</p>
+
+			<p>
+				The celebratory customs associated in various countries with Christmas have a mix of
+				pre-Christian, Christian, and secular themes and origins.[21][22] Popular modern customs of
+				the holiday include gift giving; completing an Advent calendar or Advent wreath; Christmas
+				music and caroling; viewing a Nativity play; an exchange of Christmas cards; church
+				services; a special meal; and the display of various Christmas decorations, including
+				Christmas trees, Christmas lights, nativity scenes, garlands, wreaths, mistletoe, and holly.
+				In addition, several closely related and often interchangeable figures, known as Santa
+				Claus, Father Christmas, Saint Nicholas, and the Christkind, are associated with bringing
+				gifts to children during the Christmas season and have their own body of traditions and
+				lore.[23] Because gift-giving and many other aspects of the Christmas festival involve
+				heightened economic activity, the holiday has become a significant event and a key sales
+				period for retailers and businesses. Over the past few centuries, Christmas has had a
+				steadily growing economic effect in many regions of the world.
+			</p>
+		</section>
+
 		<script src="/javascript/script.js"></script>
+		<script src="/javascript/section.js"></script>
 	</body>
 </html>
