--- a/scroll-santa/index.html
+++ b/scroll-santa/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/stylesheets/style.css" />
+		<link rel="stylesheet" href="./stylesheets/style.css" />
 		<title>Scroll Website</title>
 	</head>
 	<body>
@@ -18,9 +18,9 @@
 		</header>
 
 		<section class="parallax">
-			<img src="/assets/christmas.png" id="christmas" width="100%" />
-			<img src="/assets/left.png" id="left" width="45%" />
-			<img src="/assets/santa.png" id="santa" width="50%" />
+			<img src="./assets/christmas.png" id="christmas" width="100%" />
+			<img src="./assets/left.png" id="left" width="45%" />
+			<img src="./assets/santa.png" id="santa" width="50%" />
 			<h2 id="main-text">Merry Christmas</h2>
 		</section>
 
@@ -74,7 +74,7 @@
 			</p>
 		</section>
 
-		<script src="/javascript/script.js"></script>
-		<script src="/javascript/section.js"></script>
+		<script src="./javascript/script.js"></script>
+		<script src="./javascript/section.js"></script>
 	</body>
 </html>
