--- a/scroll2/index.html
+++ b/scroll2/index.html
@@ -29,6 +29,34 @@
 				<img id="straw" src="./assets/straw.png" />
 				<img id="icecream3" src="./assets/icecream3.png" />
 				<img id="cupcake2" src="./assets/cupcake2.png" />
+				<img id="candy1" src="./assets/candy1.png" />
+				<img id="americano" src="./assets/americano.png" />
+			</section>
+
+			<section class="two">
+				<div class="left">
+					<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+						<path
+							fill="#FFD6A5"
+							d="M37,-44.7C51.7,-40.2,70.1,-34.5,77.7,-22.5C85.3,-10.6,82.2,7.6,75.4,23.3C68.6,39.1,58.2,52.4,45,57C31.9,61.6,15.9,57.5,-0.9,58.8C-17.8,60,-35.6,66.8,-47.7,61.8C-59.9,56.9,-66.4,40.3,-72.9,23.1C-79.3,5.8,-85.7,-12,-79.9,-24.8C-74.2,-37.6,-56.3,-45.2,-40.9,-49.4C-25.6,-53.7,-12.8,-54.5,-0.8,-53.3C11.1,-52.2,22.3,-49.1,37,-44.7Z"
+							transform="translate(100 100)"
+						/>
+					</svg>
+				</div>
+				<div class="right">
+					<h1>Dessert of the Month</h1>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aliquid culpa quasi
+						placeat inventore, vel quaerat totam nihil blanditiis dolorum voluptate ea in eveniet
+						cupiditate quam officia? Doloribus illum laudantium vitae, magni obcaecati dolor earum
+						tenetur iste ab laboriosam fuga corporis veniam cumque quisquam voluptates cupiditate
+						quod sint dolorum ex vero, cum aliquid ipsum, magnam quos? Eum error facere iusto
+						adipisci blanditiis dolores qui sequi, a odio, illum laboriosam. Obcaecati nulla vero
+						assumenda eligendi quisquam tempora eius corrupti dolor quo a? Vitae molestias harum
+						laborum est, quo ipsum temporibus libero iusto alias sit blanditiis expedita et quidem.
+						Distinctio, non adipisci!
+					</p>
+				</div>
 			</section>
 		</main>
 
