feat: 기본 화면 구성3

--- a/scroll2/index.html
+++ b/scroll2/index.html
@@ -58,6 +58,25 @@
 					</p>
 				</div>
 			</section>
+
+			<section class="three">
+				<div class="card first">
+					<img id="strawberry" src="./assets/strawberry.png" />
+					<img id="cake1" src="./assets/cake1.png" />
+					<h1>Chocolate Cake</h1>
+					<button>Read More</button>
+				</div>
+				<div class="card second">
+					<h1>Cherry Ice Cream</h1>
+					<button>Read More</button>
+				</div>
+				<div class="card thrid">
+					<img id="lime" src="./assets/mint.png" />
+					<img id="cupcake3" src="./assets/cupcake3.png" />
+					<h1>Mint Cupcake</h1>
+					<button>Read More</button>
+				</div>
+			</section>
 		</main>
 
 		<script src="./script.js"></script>
