feat: .two에서 progress bar 레이아웃 추가

--- a/corp/index.html
+++ b/corp/index.html
@@ -32,7 +32,10 @@
 					</p>
 					<i class="ri-arrow-down-double-line down"></i>
 				</section>
-				<section class="panel two">TWO</section>
+				<section class="panel two">
+					<span class="line"></span>
+					<h1>Progress of your scroll in the page</h1>
+				</section>
 				<section class="panel three">THREE</section>
 				<section class="panel four">FOUR</section>
 				<section class="panel five">FIVE</section>
