feat: .three 레이아웃 추가

--- a/corp/index.html
+++ b/corp/index.html
@@ -16,30 +16,35 @@
 				<i class="ri-home-3-fill">Corporation</i>
 				<i class="ri-menu-fill"></i>
 			</header>
-			<div class="container">
-				<section class="panel one">
-					<h1>Welcome to Corporation</h1>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore suscipit corrupti porro
-						et dolore, harum ducimus eum hic illo modi dolores ipsa? Ipsa totam repellendus ullam,
-						voluptate, aspernatur nobis nulla doloribus temporibus nesciunt exercitationem impedit
-						quod aut? Quidem accusantium voluptatibus voluptates nesciunt, eius quasi impedit quam
-						ullam! Nam quas omnis rerum cum quisquam perferendis, voluptatum fuga commodi voluptates
-						veniam ullam, eaque perspiciatis quae labore nemo excepturi. Illo aut, odio vel dolores,
-						reiciendis eligendi illum laudantium asperiores nesciunt fuga ipsam animi, saepe enim
-						quaerat maxime commodi tenetur amet ducimus ut nulla quasi accusantium aliquam sit
-						voluptatibus? Ad debitis cum laborum velit.
-					</p>
-					<i class="ri-arrow-down-double-line down"></i>
-				</section>
-				<section class="panel two">
-					<span class="line"></span>
-					<h1>Progress of your scroll in the page</h1>
-				</section>
-				<section class="panel three">THREE</section>
-				<section class="panel four">FOUR</section>
-				<section class="panel five">FIVE</section>
-			</div>
+			<section class="one">
+				<h1>Welcome to Corporation</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore suscipit corrupti porro et
+					dolore, harum ducimus eum hic illo modi dolores ipsa? Ipsa totam repellendus ullam,
+					voluptate, aspernatur nobis nulla doloribus temporibus nesciunt exercitationem impedit
+					quod aut? Quidem accusantium voluptatibus voluptates nesciunt, eius quasi impedit quam
+					ullam! Nam quas omnis rerum cum quisquam perferendis, voluptatum fuga commodi voluptates
+					veniam ullam, eaque perspiciatis quae labore nemo excepturi. Illo aut, odio vel dolores,
+					reiciendis eligendi illum laudantium asperiores nesciunt fuga ipsam animi, saepe enim
+					quaerat maxime commodi tenetur amet ducimus ut nulla quasi accusantium aliquam sit
+					voluptatibus? Ad debitis cum laborum velit.
+				</p>
+				<i class="ri-arrow-down-double-line down"></i>
+			</section>
+			<section class="two">
+				<span class="line"></span>
+				<h1>Progress of your scroll in the page</h1>
+			</section>
+			<section class="panel three">
+				<h1 class="reveal reveal-from-left">Happy Christmas</h1>
+				<img class="reveal reveal-from-right" id="tree" src="./assets/tree.png" />
+				<img class="present reveal reveal-from-left" id="present4" src="./assets/present4.png" />
+				<img class="present reveal reveal-from-left" id="present3" src="./assets/present3.png" />
+				<img class="present reveal reveal-from-left" id="present2" src="./assets/present2.png" />
+				<img class="present reveal reveal-from-left" id="present1" src="./assets/present1.png" />
+			</section>
+			<section class="panel four"></section>
+			<section class="panel five">FIVE</section>
 		</main>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"
