--- a/corp/index.html
+++ b/corp/index.html
@@ -58,6 +58,6 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		></script>
-		<script src="./script.js"></script>
+		<script type="module" src="./scripts/script.js"></script>
 	</body>
 </html>
